--- a/VolunteerWebsites/Info.plist
+++ b/VolunteerWebsites/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Permission Requested</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This will let you easily find directions to a volunteer building</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
