--- a/VolunteerWebsites/Info.plist
+++ b/VolunteerWebsites/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Permission Requested</string>
+	<string>This will let you easily find directions to a volunteer building</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This will let you easily find directions to a volunteer building</string>
 	<key>NSAppTransportSecurity</key>
